--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-ciao
-cia
+<h1 i8d="principale"> titolo</h1>
+<h1> sezione </h1>
+<h2 > sottosezione </h2>
+<b> testo in grassetto</b>
+
+<p>
+    contenuto del primo paragrafo
+
+    il testo continua.
+
+
+    anche se cambio riga.
+</p>
+
+<p>secondo paragrafo</p>
