--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
-<h1 i8d="principale"> titolo</h1>
-<h1> sezione </h1>
-<h2 > sottosezione </h2>
-<b> testo in grassetto</b>
+<!-- questo è un commento -->
 
-<p>
-    contenuto del primo paragrafo
+<ol start="100"> 
+        <li>ciao</li>
+</ol>
+<ul>
+        <li>mela</li>
+</ul>
+<menu>
+    <li>ciao</li>
+</menu>
 
-    il testo continua.
-
-
-    anche se cambio riga.
-</p>
-
-<p>secondo paragrafo</p>
+<ul>
+    <li>ciaoo</li>
+</ul>
+<dl>
+    <li>ciao</li>
+</dl>
+<dl>
+    <dt>ciao</dt>
+    <dd>ciao</dd>
+</dl>
